--- a/toboggan/gui/styles.css
+++ b/toboggan/gui/styles.css
@@ -5,6 +5,21 @@ body {
   margin: 0;
 }
 
+r {
+  color: blue;
+  font-weight: bold;
+}
+
+c {
+  color: green;
+  font-weight: bold;
+}
+
+t {
+  color: red;
+  font-weight: bold;
+}
+
 @keyframes pulse {
   from { opacity: 0.7; }
   to { opacity: 0.2; }
